packages/taquito-michel-codec/test/contracts_015/ill_typed/sapling_build_empty_state_with_int_parameter.tz
parameter nat;
storage (sapling_state 8);
code {
       UNPAIR;
       SWAP;
       DROP;
       SAPLING_EMPTY_STATE;
       NIL operation;
       PAIR;
     };
